# Roblox-Outfit-Marketplace-Agents

./: .env.example  .env_sample  .gitignore  DOCKER_USAGE.md  Dockerfile  README.md  chat_terminal.py  coral-agent.toml  crossmint-keypair.json  main.py  pyproject.toml  registry.toml  requirements.txt  roblox_tools.py  wallet.toml
.github/workflows/: docker-image.yml
agents/: __init__.py  config.py  contracts.py  conversation_agent.py  firecrawl_agent.py  light_ranker.py  memory.py  orchestrator.py  param_helpers.py  roblox_catalog_client.py  roblox_catalog_tool.py  stylist_agent.py  tools.py
scripts/: chat_cli.py
server/: __init__.py  main.py
tests/: test_conversation_agent.py  test_integration.py
